2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.base/info-types.exp.tcl (match_line, gdb_test_lines): Move ...
	* lib/gdb.exp: ... here.
	* gdb.base/info-macros.exp: Use gdb_test_lines.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.base/info-types.exp.tcl (match_line): Handle --any.
	(gdb_test_lines): Factor out of ...
	(run_test): ... here.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.base/batch-preserve-term-settings.exp (spawn_shell): Fix
	matching of initial prompt.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.threads/multi-create-ns-info-thr.exp: Limit breakpoint regexp to
	one line.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.base/sect-cmd.exp: Use gdb_test.  Use -wrap "".  Fix
	test name.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.base/sect-cmd.exp: Fix saw_section_address_line regexp.

2021-06-07  Simon Marchi  <simon.marchi@polymtl.ca>

	* gdb.base/continue-all-already-running.exp: Call fail if can't
	run to main.

2021-06-07  Andrew Burgess  <andrew.burgess@embecosm.com>

	PR gdb/27847
	* gdb.dwarf2/dw2-weird-type-len.c: New file.
	* gdb.dwarf2/dw2-weird-type-len.exp: New file.

2021-06-07  Simon Marchi  <simon.marchi@polymtl.ca>

	* gdb.base/attach.exp (test_command_line_attach_run): Use
	proc_with_prefix.

2021-06-07  Tom de Vries  <tdevries@suse.de>

	PR testsuite/27908
	* gdb.base/run-attach-while-running.exp (test): Don't match prompt
	after attach using '$gdb_prompt $'.

2021-06-07  Tom de Vries  <tdevries@suse.de>

	* gdb.base/info-types.exp.tcl: Remove "File .*" matching from regexp
	matching state machine.

2021-06-07  Tom de Vries  <tdevries@suse.de>

	* gdb.base/new-ui-pending-input.exp
	(test_command_line_new_ui_pending_input): Fix regexp for "initial
	prompt on extra console".

2021-06-07  Tom de Vries  <tdevries@suse.de>

	* gdb.base/info-types.exp.tcl (run_test): Move "random line" regexp
	up.

2021-06-06  Simon Marchi  <simon.marchi@efficios.com>
